--- a/index.css
+++ b/index.css
@@ -155,6 +155,12 @@ footer {
     margin-bottom: 15px;
 }
 
+.experience .card:hover {
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+    transform: translateY(-8px);
+}
+
 .container h2 {
     margin-left: 30px;
     margin-bottom: 10px;
